--- a/code/navbar.html
+++ b/code/navbar.html
@@ -20,7 +20,16 @@
 			<ol id="navbar">
 				<li class="buttonHeader"><a href="https://www.google.com"><img src="styles/images/complogo.png" id="navbar-image"></a></li>
 				<li class="buttonHeader"><a href="https://www.google.com"><h2>Home</h2></a></li>
-				<li class="buttonHeader"><a href="https://www.google.com"><h2>Jobs</h2></a></li>
+				<li class="buttonHeader">
+				    <div class="dropdown">
+					<a href="https://www.google.com"><h2>Jobs</h2></button>
+					    <div class = "dropdownContent">
+						<a href="https://google.com">Job A</a>
+						<a href="+">Job B</a>
+						<a href="/">Job C</a>
+					    </div>
+				    </div>
+				</a></li>
 				<li class="buttonHeader"><a href="https://www.google.com"><h2>Apply</h2></a></li>
 				<li class="buttonHeader"><a href="https://www.google.com"><h2>About</h2></a></li>
 				<li class="buttonHeader"><a href="https://www.google.com"><h2>Enhancements</h2></a></li>
