--- a/Pages/apply2.html
+++ b/Pages/apply2.html
@@ -27,7 +27,7 @@
                   <li class="buttonHeader"><a href="apply2.html"><h2>Apply</h2></a></li>
                   <li class="buttonHeader"><a href="about.html"><h2>About</h2></a></li>
                   <li class="buttonHeader"><a href="enhancements.html"><h2>Enhancements</h2></a></li>
-                  <li class="buttonHeader"><a href="mailto:104558273@student.siwn.edu.au"><h2>Contact Us</h2></a></li>
+                  <li class="buttonHeader"><a href="csscrusaders@gmail.com"><h2>Contact Us</h2></a></li>
               </ol>
           </nav>
       </header>
@@ -190,7 +190,7 @@
             </form>
         </article>
         <footer>
-            <p>Contact us at: <a href="mailto:104558273@student.siwn.edu.au" class="footerheader revertA">Our Company Email</a></p>
+            <p>Contact us at: <a href="mailto:csscrusaders@gmail.com" class="footerheader revertA">Our Company Email</a></p>
         </footer>
 
 
