--- a/Pages/about.html
+++ b/Pages/about.html
@@ -35,91 +35,86 @@
 
 	<article class="main">
       <div class="top-sections">
-        <section>
-          <div class="headingGray">
-            <h2 class="centerText">What are we<span>?</span></h2>
-          </div><br>
+       <section>
+            <h2>Group Information</h2>
+            <dl>
+                <dt>Group Name:</dt>
+                <dd>CSS Crusaders</dd>
+                <dt>Group ID:</dt>
+                <dd>Enter your group ID here</dd>
+                <dt>Tutor's Name:</dt>
+                <dd>Ru Jia</dd>
+                <dt>Course:</dt>
+                <dd>COS10026 Computing Technology Inquiry Project</dd>
+            </dl>
+        </section>
 
-          <p>Elevating lives through execptional tech solutions, we're commited to empowering your world. We believe a digitally-enhanced lifestyle fosters happiness and growth.</p>
-        </section><br><hr class="grayBorder"/><br>
         <section>
-          <div class="headingGray">
-            <h2 class="centerText">Our Vision</h2>
-          </div><br>
-          <p>To be the leading provider of innovative solutions that empower individuals and organizations.</p>
-        </section><br><hr class="grayBorder"/><br>
-        <section>
-          <div class="headingGray">
-            <h2 class="centerText">Our History</h2>
-          </div><br>
-          <p>Founded in 1999, our company has grown from a small start-up to a global brand with a strong presence in over 50 countries.</p>
-        </section><br><hr class="grayBorder"/><br>
-        <section>
-          <div class="headingGray">
-            <h2 class="centerText">Our Values</h2>
-          </div><br>
-          <ul>
-            <li>Customer satisfaction</li>
-            <li>Innovation</li>
-            <li>Integrity</li>
-            <li>Teamwork</li>
-          </ul>
-        </section><br><hr class="grayBorder"/><br>
-        <section>
-          <div class="headingGray">
-            <h2 class="centerText">Our Team</h2>
-          </div><br>
-          <h3>Dominic White (Backend & Frontend Developer)</h3>
-          <p>I see this company as one with innovative and impactful web solutions to help pave the new ways into web development.</p><br>
-          <h3>Jack Spong (Backend Developer)</h3>
-          <p>I am looking to fuether the companies place on the coorperate ladder when it comes to technical innovations.</p><br>
-          <h3>Daniel Frankish (Frontend Developer)</h3>
-          <p>I am looking toi further the companies goals of creating clean and successful web solutions for any and all clients.</p><br>
-          <h3>Ahnaf Tajwar Afif (Frontend & Backend Developer)</h3>
-          <p>I am looking to combine the best of both worlds to create simple but elegant, modern websites and to leave a mark in the competitive market.</p><br>
-          <h3>Charlie O'Neill (Frontend Developer)</h3>
-          <p>I see this company becoming one which offers truly meaningful and valuable innovation to our clients.</p><br>
-        </section><hr class="grayBorder"/><br>
-      </div>
+            <h2>Group Photo</h2>
+            <figure>
+                <img src="group-photo.jpg" alt="Group Photo">
+                <figcaption>Our Group Photo</figcaption>
+            </figure>
+        </section>
 
-      <div class="bottom-sections">
         <section>
-          <h2>Our Products</h2>
-          <p>We offer a wide range of products and services to meet the needs of our customers, including software, hardware, and consulting services.</p>
+            <h2>Timetable</h2>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Day</th>
+                        <th>Time</th>
+                        <th>Course Code</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Monday</td>
+                        <td>9:00 AM - 11:00 AM</td>
+                        <td>CSE1010</td>
+                    </tr>
+                    <tr>
+                        <td>Tuesday</td>
+                        <td>11:00 AM - 1:00 PM</td>
+                        <td>CSE1020</td>
+                    </tr>
+                    <tr>
+                        <td>Wednesday</td>
+                        <td>2:00 PM - 4:00 PM</td>
+                        <td>CSE1030</td>
+                    </tr>
+                    <tr>
+                        <td>Thursday</td>
+                        <td>10:00 AM - 12:00 PM</td>
+                        <td>CSE1040</td>
+                    </tr>
+                    <tr>
+                        <td>Friday</td>
+                        <td>1:00 PM - 3:00 PM</td>
+                        <td>CSE1050</td>
+                    </tr>
+                </tbody>
+            </table>
         </section>
-        <section>
-          <h2>Our Customers</h2>
-          <p>We serve a diverse range of customers, from small businesses to Fortune 500 companies, across various industries.</p>
-        </section>
-        <section>
-          <h2>Our Locations</h2>
-          <ul>
-            <li>Headquarters: Victoria, Melbourne</li>
-            <li>Regional offices: New York, London, Tokyo</li>
-          </ul>
-        </section>
-        <section>
-          <h2>Our Awards</h2>
-          <ul>
-            <li>Best Software Company (2020)</li>
-            <li>Top 100 Companies to Work For (2019)</li>
-            <li>Green Innovator Award (2018)</li>
-          </ul>
-        </section>
-        <section>
-          <h2>Contact Us</h2>
-          <address>
-            28 Garnet Street<br>
-            Sunshine, Victoria 3020<br>
-            (555) 555-1234<br>
-            info@ourcompany.com
-          </address>
-        </section>
-      </div>
-    </article>
 
-      <footer>
-        <p>Contact us at: <a href="mailto:104558273@student.siwn.edu.au" class="footerheader">Our Company Email</a></p>
+        <section>
+            <h2>Contact Us</h2>
+            <p>You can reach our group by email at <a href="mailto:groupemail@example.com">groupemail@example.com</a>.</p>
+        </section>
+
+        <section>
+            <h2>Group Profile</h2>
+            <p>Here is some extra information about our group:</p>
+            <ul>
+                <li>Our group consists of 5 members from different parts of the world.</li>
+                <li>We all have a passion for programming and have some experience in web development.</li>
+                <li>Some of our interests include music, movies, and sports.</li>
+            </ul>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2023 Our Group. All rights reserved.</p>
     </footer>
 
   </body>
