--- a/Pages/about.html
+++ b/Pages/about.html
@@ -106,9 +106,9 @@
             <h2>Group Profile</h2>
             <p>Here is some extra information about our group:</p>
             <ul>
-                <li>Our group consists of 5 members from different parts of the world.</li>
+                <li>Our group consists of 5 members from different parts of the world including Dominic, Jack, Charlie, Ahnaf and Daniel.</li>
                 <li>We all have a passion for programming and have some experience in web development.</li>
-                <li>Some of our interests include music, movies, and sports.</li>
+                <li>Some of our interests include coding, books and outdoor adventure.</li>
             </ul>
         </section>
     </main>
