--- a/Pages/about.html
+++ b/Pages/about.html
@@ -99,7 +99,7 @@
 
         <section>
             <h2>Contact Us</h2>
-            <p>You can reach our group by email at <a href="mailto:groupemail@example.com">groupemail@example.com</a>.</p>
+            <p>You can reach our group by email at <a href="mailto:csscrusaders@gmail.com">csscrusaders@gmail.com</a>.</p>
         </section>
 
         <section>
