--- a/Pages/about.html
+++ b/Pages/about.html
@@ -28,7 +28,7 @@
 				<li class="buttonHeader"><a href="apply2.html"><h2>Apply</h2></a></li>
 				<li class="buttonHeader"><a href="about.html"><h2>About</h2></a></li>
 				<li class="buttonHeader"><a href="enhancements.html"><h2>Enhancements</h2></a></li>
-                <li class="buttonHeader"><a href="mailto:104558273@student.siwn.edu.au"><h2>Contact Us</h2></a></li>
+                <li class="buttonHeader"><a href="mailto:csscrusaders@gmail.com"><h2>Contact Us</h2></a></li>
 			</ol>
 		</nav>
 	</header>
