--- a/Pages/about.html
+++ b/Pages/about.html
@@ -71,27 +71,27 @@
                     <tr>
                         <td>Monday</td>
                         <td>9:00 AM - 11:00 AM</td>
-                        <td>CSE1010</td>
+                        <td>COS10026</td>
                     </tr>
                     <tr>
                         <td>Tuesday</td>
                         <td>11:00 AM - 1:00 PM</td>
-                        <td>CSE1020</td>
+                        <td>COS10026</td>
                     </tr>
                     <tr>
                         <td>Wednesday</td>
                         <td>2:00 PM - 4:00 PM</td>
-                        <td>CSE1030</td>
+                        <td>COS10026</td>
                     </tr>
                     <tr>
                         <td>Thursday</td>
                         <td>10:00 AM - 12:00 PM</td>
-                        <td>CSE1040</td>
+                        <td>COS10026</td>
                     </tr>
                     <tr>
                         <td>Friday</td>
                         <td>1:00 PM - 3:00 PM</td>
-                        <td>CSE1050</td>
+                        <td>COS10026</td>
                     </tr>
                 </tbody>
             </table>
