--- a/Pages/apply2.html
+++ b/Pages/apply2.html
@@ -27,21 +27,24 @@
                   <li class="buttonHeader"><a href="apply2.html"><h2>Apply</h2></a></li>
                   <li class="buttonHeader"><a href="about.html"><h2>About</h2></a></li>
                   <li class="buttonHeader"><a href="enhancements.html"><h2>Enhancements</h2></a></li>
-                  <li class="buttonHeader"><a href="csscrusaders@gmail.com"><h2>Contact Us</h2></a></li>
+                  <li class="buttonHeader"><a href="mailto:104558273@student.siwn.edu.au"><h2>Contact Us</h2></a></li>
               </ol>
           </nav>
       </header>
         <article class="main">
-            <div class="headingGray">
-                <h1 class="centerText">Personal information</h1>
-                <p>personal information that can be used for contact and offical documentation</p>
+            <form method="post" action="https://mercury.swin.edu.au/it000000/formtest.php">
+                <div class="headingGray">
+                    <h1 class="centerText">Personal information</h1>
+                    <p class="centerText">Personal information that can be used for contact and offical documentation</p>
                 </div><br>
+
                 <div class="centerText centerElements">
                     <p class="inputBox">
                         <label for="jobrefnum">Job Reference Number:</label>
                         <input  type="text" id="jobrefnum" name="jobrefnum" pattern="{5}"><br>
                     </p>
                 </div><br>
+
                 <p class="centerBox">
                     <span>
 
@@ -58,16 +61,15 @@
                     <input class="inputBox input" type="tel" id="PhoneNumber" name="PhoneNumber" required pattern="[0-9]+{8,12}"><br>
 
                     </span>
-
                 </p><br><br>
 
                 <div class="centerBox">
                     <div class="wrap100">
-                        <div class="floatLeft centerText"><br>
+                        <div class="floatLeft centerText">
                             <label for="DateOfBirth"><h1>Date of birth:</h1></label>
                             <input type="date" id="DateOfBirth" name="DateOfBirth" required><br>
                         </div>
-                        <div class="floatRight centerText"><br>
+                        <div class="floatRight centerText">
                             <h1>Gender:</h1>
                             <label for="male">Male</label>
                             <input type="radio" id="male" name="gender" value="Male">
@@ -80,49 +82,45 @@
 
                             <label for="prefnosay">Prefer not to say</label>
                             <input type="radio" id="prefnosay" name="gender" value="Prefer not to say">
+                        </div>
                     </div>
-                </div>
                 </div><br><br>
-
-
 
                 <div class="centerBox centerText">
                     <span>
-                    <label for="StreetAddress">Street Address:</label>
-                    <input class="inputBox input" type="text" id="StreetAddress" name="StreetAddress" required pattern="{40}"><br>
+                        <label for="StreetAddress">Street Address:</label>
+                        <input class="inputBox input" type="text" id="StreetAddress" name="StreetAddress" required pattern="{40}"><br>
 
-                    <label for="SuburbTown">Suburb/Town:</label>
-                    <input class="inputBox input" type="text" id="SuburbTown" name="SuburbTown" required pattern="{40}"><br>
+                        <label for="SuburbTown">Suburb/Town:</label>
+                        <input class="inputBox input" type="text" id="SuburbTown" name="SuburbTown" required pattern="{40}"><br>
 
-                    <label for="StateTeritory">Select a State or Territory:</label>
-                    <select class="inputBox input" id="StateTeritory" name="StateTeritory" required>
-                    <option value="Select" class="input">SELECT</option>
-                    <option value="VIC" class="input">VIC</option>
-                    <option value="NSW" class="input">NSW</option>
-                    <option value="ACT" class="input">ACT</option>
-                    <option value="SA" class="input">SA</option>
-                    <option value="QLD" class="input">QLD</option>
-                    <option value="WA" class="input">WA</option>
-                    <option value="NT" class="input">NT</option>
-                    </select><br>
+                        <label for="StateTeritory">Select a State or Territory:</label>
+                        <select class="inputBox input" id="StateTeritory" name="StateTeritory" required>
+                            <option value="Select" class="input">SELECT</option>
+                            <option value="VIC" class="input">VIC</option>
+                            <option value="NSW" class="input">NSW</option>
+                            <option value="ACT" class="input">ACT</option>
+                            <option value="SA" class="input">SA</option>
+                            <option value="QLD" class="input">QLD</option>
+                            <option value="WA" class="input">WA</option>
+                            <option value="NT" class="input">NT</option>
+                        </select><br>
 
-                    <label for="PostCode">Post Code:</label>
-                    <input class="inputBox input" type="text" id="PostCode" name="PostCode" required pattern="[0-9]+{4}"><br>
-
+                        <label for="PostCode">Post Code:</label>
+                        <input class="inputBox input" type="text" id="PostCode" name="PostCode" required pattern="[0-9]+{4}"><br>
                     </span>
                 </div><br><br>
 
-            <div class="headingGray">
-                <h1 class="centerText">Your Skills</h1>
-                <p>Skills that relate to you, or you think may benifit us.</p>
-            </div><br><br>
-            <form method="post" action="https://mercury.swin.edu.au/it000000/formtest.php">
+                <div class="headingGray">
+                    <h1 class="centerText">Your Skills</h1>
+                    <p class="centerText">Skills that relate to you, or you think may benifit us.</p>
+                </div><br><br>
                 <div class="centerBox">
-                    <div class = "wrap200">
+                    <div class = "wrap250">
                         <div class="floatLeft">
                             <input type="checkbox" id="adaptable" name="Adaptable" value="Adaptable">
                             <label for="adaptable">Adaptable</label><br>
-                            <input type="checkbox" id="openMinded" name="Open-Minded" value="Open-Minded">
+                            <input type="checkbox" id="openMinded" name="Open Minded" value="Open-Minded">
                             <label for="openMinded">Open-Minded</label><br>
                             <input type="checkbox" id="confident" name="Confident" value="Confident">
                             <label for="confident">Confident</label><br>
@@ -172,7 +170,7 @@
 
                 <div class="headingGray">
                     <h1 class="centerText">About You</h1>
-                    <p>Write a few sentences describing why you would be perfect for this job.</p>
+                    <p class="centerText">Write a few sentences describing why you would be perfect for this job.</p>
                 </div><br><br>
 
                 <div class="centerBox">
@@ -184,15 +182,13 @@
                         <button class="buttonGeneral">Back</button>
                     </div>
                     <div class="floatRight padding10">
-                        <input type="submit" class="buttonGeneral elementRight" value="Submit">
+                        <input type="submit" value="Submit" class="buttonGeneral elementRight">
                     </div>
                 </div>
             </form>
         </article>
         <footer>
-            <p>Contact us at: <a href="mailto:csscrusaders@gmail.com" class="footerheader revertA">Our Company Email</a></p>
+            <p>Contact us at: <a href="mailto:csscrusaders@gmail.com" class="footerheader">Our Company Email</a></p>
         </footer>
-
-
     </body>
 </html>
