--- a/Pages/jobs.html
+++ b/Pages/jobs.html
@@ -31,68 +31,68 @@
                 </ol>
             </nav>
             </header>
-        <article class="main">
+          <article class="main">
             <div class="headingGray">
                 <h1 class="centerText">Open Positions</h1>
                 <p class="centerText">Positions we are currently hiring.</p>
             </div><br><br>
             <section>
-                <a href="apply2.html" class="revertA">
+                <a href="apply.html" class="revertA" id="textdeco">
                     <div class="job_listing padding10">
                         <br><h2 class="centerText">Web developer</h2>
-                        <sub>Reference number: WBD01 </sub>
-                            <img class="listing_icon" src="styles/images/sampleimg.png" alt="Job listing 1 icon image">
+                        <sub>Reference number: WBD01 </sub><br>
+                            <img class="listing_icon" src="styles/images/job1icon.png" alt="Job listing 1 icon image">
                             <h3>Job description:</h3>
-                            <p>This is what you will do</p><br>
+                            <p>In this role you will work alongside our team of experts to develop sleak and modern web pages for our clients</p><br>
                             <aside>
                                 <h3 class="centerText">Manager:</h3>
-                                <p class="centerText"">Person</p><br>
+                                <p class="centerText">Projects Manager</p><br>
                             </aside>
                             <h3>Salary range:</h3>
-                            <p>70-100k</p><br>
+                            <p>$70-90k</p><br>
 
                             <h3>Key responsibilities</h3>
                             <ol>
-                                <li>X</li>
-                                <li>Y</li>
-                                <li>Z</li>
+                                <li>Front end development</li>
+                                <li>Back end development</li>
+                                <li>Communication with clients</li>
                             </ol><br>
                             <h3>Required qualifications, skills, knowledge and attributes.</h3>
                             <ul>
-                                <li>X</li>
-                                <li>Y</li>
-                                <li>Z</li>
+                                <li>Knowledge on how to use HTML5</li>
+                                <li>Knowledge on how to use CSS</li>
+                                <li>Customer service skills</li>
                             </ul><br>
                     </div>
                 </a>
             </section><br><br>
 
             <section>
-                <a href="apply2.html" class="revertA">
+                <a href="apply.html" class="revertA" id="textdeco">
                     <div class="job_listing padding10">
                         <br><h2 class="centerText">Cyber security analyst</h2>
-                        <sub>Reference number: CSA02 </sub>
-                            <img class="listing_icon" src="styles/images/sampleimg.png" alt="Job listing 2 icon image">
+                        <sub>Reference number: CSA02 </sub><br>
+                            <img class="listing_icon" src="styles/images/job2icon.png" alt="Job listing 2 icon image">
                             <h3>Job description:</h3>
-                            <p>This is what you will do</p><br>
+                            <p>In this role you will work alongside our team of experts to explore and manage cyber security risks to our clients to ensure their online safety</p><br>
                             <aside>
                                 <h3 class="centerText">Manager:</h3>
-                                <p class="centerText"">Person</p><br>
+                                <p class="centerText">Projects Manager</p><br>
                             </aside>
                             <h3>Salary range:</h3>
-                            <p>70-100k</p><br>
+                            <p>$80-100k</p><br>
 
                             <h3>Key responsibilities</h3>
                             <ol>
-                                <li>X</li>
-                                <li>Y</li>
-                                <li>Z</li>
+                                <li>Active reasearch of cyber security threats</li>
+                                <li>Implementation of cyber secuirty measures on projects</li>
+                                <li>Communication with clients</li>
                             </ol><br>
                             <h3>Required qualifications, skills, knowledge and attributes.</h3>
                             <ul>
-                                <li>X</li>
-                                <li>Y</li>
-                                <li>Z</li>
+                                <li>Prior experience in cyber secuirty</li>
+                                <li>A relevant course with a cyber security component</li>
+                                <li>Customer service skills</li>
                             </ul><br>
                     </div>
                 </a>
