--- a/Pages/about.html
+++ b/Pages/about.html
@@ -52,7 +52,7 @@
       <section>
           <h2>Group Photo</h2>
           <figure>
-              <img src="styles/images/group-photo.jpg" alt="Group Photo">
+              <img src="styles/images/group-photo1.png" alt="Group Photo">
               <figcaption>Our Group Photo</figcaption>
           </figure>
       </section>
